plang/testing/logs/false-incorrect/170/program170.p.p
mZrEb pml itCf5 B g4.


gjEge (vydW) :- nWq (M0p) Mj6, (d7I6 PqA); fjpB (TT) sPmF tmeKO (j pF TLkF c0 ZO); nS3 EG5 recuv, tH a xhI3 vr (XLvi); kQiT (iS jWtOe CO L1c (BCVC)); m (CN2o) (SB), v0S; vVRP; uj4u xnbV Nbr; (mw, g e (xk KzJ (H))).

ah :- (unoF (KjN) BxQyq (yr Q eFX (A) b)), ((g (BMoP); lv (RaH) (ne qtZb1 (eg Z (O) w7SmZ N) (vx cPM rxOxC) (lY58I)); mAah5 dXAyQ (A) (Owk) Ie; m (z gb7O KVJ8 a0Zx) ub)).
cFsU GC5 VoM r4 J34U.

zX vxZM YAE UXRFB :- r (rG3 (H)) r4Et (Wgm9V) v.

f2naJ.
a :- ((fFP; alE (rjI) pq6Hw; (qp); (s7 zy oMqs3); s5Q JVyK FP, b5L)).


zq6 Q4m H (R) (Wkg6f) :- (sc1y (Mx)), u (z (QPK) (EMYg) D l1v0L) EUw9c auIJW; w (dx7g trG (k7hu1 (HTMjy) (MOJ8)) Ld L0JJ) (ac (d pU ij2aT) a uq) (lHHQ kwFBL (UX) (I)) (tg9); t w; gb3TC.

sx.


? ((nWqcB (svYRF Y) (I) qf; hby)); (nSf7 fOT, i SOv), mfbVl (ZD5) kD (e8zEJ (h (spt) (spD (s (ZtZ)) (fsHL))) Frj (BpZ) (Fn)) TNk89.



